# MarkovChains

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  audit_phase10.py  audit_phase11.py  benchmark.py  index.html  mkdocs.yml  objects.inv  original_code.py  pyproject.toml  sitemap.xml
.claude/agents/: architect.md  critic-auditor.md  math-theorist.md  quant-developer.md  stakeholder.md  test-engineer.md
.claude/memory/: activeContext.md
.github/workflows/: ci.yml  tests.yml
api/certified/: index.html
api/finance/: index.html
api/functions/: index.html
architecture/: index.html
benchmarks/: README.md  helpers.py  plot_results.py  requirements.txt  run_all.py  vs_quantlib.py
benchmarks/results/: REPORT.md
benchmarks/results/tables/: american_comparison.csv  barrier_comparison.csv  certified_bounds.csv  double_barrier_comparison.csv  european_comparison.csv  (+1 more)
changelog/: index.html
chernoffpy/: __init__.py  accel.py  analysis.py  backends.py  certified.py  functions.py  semigroups.py
chernoffpy/finance/: __init__.py  adaptive_grid.py  american.py  american_analytical.py  barrier.py  barrier_analytical.py  barrier_dst.py  bates.py  bates_analytical.py  bates_params.py  calibration.py  certified_pricer.py  dividends.py  double_barrier.py  double_barrier_analytical.py  european.py  greeks.py  heston.py  heston_analytical.py  heston_fast.py  heston_params.py  implied_vol.py  local_vol.py  market_data.py  reporting.py  transforms.py  validation.py
contributing/: index.html
developer-guide/: index.html
docs/: architecture.md  changelog.md  developer-guide.md  getting-started.md  index.md  release-guide.md  theory.md
docs/api/: certified.md  finance.md  functions.md
docs/user-guide/: american.md  barriers.md  certified-bounds.md  choosing-pricer.md  european.md  heston-bates.md
examples/: american_with_dividends.py  finance_demo.ipynb  heston_calibration.py  verify_galkin_remizov.py
getting-started/: index.html
release-guide/: index.html
search/: search_index.json
tests/: conftest.py  test_accel.py  test_analysis.py  test_certified.py  test_functions.py  test_integration.py  test_semigroups.py
tests/finance/: conftest.py  test_adaptive_grid.py  test_american.py  test_american_adaptive.py  test_american_analytical.py  test_barrier.py  test_barrier_analytical.py  test_barrier_dst.py  test_bates.py  test_bates_analytical.py  test_calibration.py  test_certified_pricer.py  test_dividends.py  test_double_barrier.py  test_double_barrier_analytical.py  test_european.py  test_greeks.py  test_heston.py  test_heston_analytical.py  test_heston_fast.py  test_implied_vol.py  test_local_vol.py  test_market_data.py  test_reporting.py  test_transforms.py  test_validation.py
theory/: index.html
user-guide/american/: index.html
user-guide/barriers/: index.html
user-guide/certified-bounds/: index.html
user-guide/choosing-pricer/: index.html
user-guide/european/: index.html
user-guide/heston-bates/: index.html
