[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chernoffpy"
version = "0.1.0"
description = "Chernoff approximations of operator semigroups with convergence rate analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Built on the theory of I.D. Remizov, O.E. Galkin et al." },
]
keywords = ["chernoff", "semigroup", "operator", "approximation", "pade", "heat-equation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
examples = [
    "matplotlib>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.sdist]
exclude = ["*.png", "original_code.py", ".github/"]

[tool.hatch.build.targets.wheel]
packages = ["chernoffpy"]
