[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chernoffpy"
version = "0.1.0"
description = "Financial derivatives pricing via Chernoff operator splitting with certified error bounds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sergey" },
]
keywords = [
    "option pricing",
    "derivatives",
    "black-scholes",
    "heston",
    "bates",
    "barrier options",
    "american options",
    "operator splitting",
    "chernoff",
    "semigroup",
    "certified bounds",
    "quantitative finance",
    "numerical methods",
    "pde",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
fast = ["numba>=0.57"]
gpu = ["cupy-cuda12x>=12.0"]
all = ["numba>=0.57", "cupy-cuda12x>=12.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/sergeeey/MarkovChains"
Documentation = "https://github.com/sergeeey/MarkovChains#readme"
Repository = "https://github.com/sergeeey/MarkovChains"
Issues = "https://github.com/sergeeey/MarkovChains/issues"

[tool.setuptools.packages.find]
include = ["chernoffpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
